    and automatic. [Selena Deckelmann and GSM]

  - Add more tests and improve existing ones. [Josh Tolley]

  - Make the audit_pid table more useful. Use sequences instead of 
    PIDs to find children. Allow for the audit_pid table to be toggled off. [GSM]

  - Remove the debugstderr and debugstdout options, as they never worked 
    correctly anyway. [GSM]

  - MCP listens for pings during table validations. [GSM]

  - Have master_q use a trigger, not multiple rules. Remove the need 
    for a separate create_child_q() function. [GSM]

  - Default for log_showtime is now 'scalar localtime' rather than 
    epoch seconds. [GSM]

Bug fixes:

  - Fix failure to disable/enable triggers when using pg_class and table 
    and schema are words changed by quote_ident. [Ben Allen]

  - Tolerate incompatibility in DEFAULT of negative numbers between 
    Postgres 8.2 and 8.3. [Jon Jensen]

  - Do better checking of bucardo_ctl executable when MCP is restarting. [Ben Allen]

  - Change timestamp to timestamptz where needed inside Bucardo.pm [Yan Farmawan]

  - Put schema in db_getconn calls [Alex Bahlai]

  - Record the proper PID for the MCP in the pid file [Goran Gugic]

  - Set the tcp_* defaults in bucardo_config to zero (system default). [GSM]

  - Allow for dead columns when checking attnums. [GSM]

  - Do not attempt respawn of MCP if mcp_dbproblem_sleep is 0. [GSM]

3.1.0 April 6, 2008

  - Fix race condition in bucardo_delta/bucardo_track updates 
    for pushdelta syncs. [GSM]

  - Auto-detect primary keys (or unique indexes) for added tables. [GSM]

  - Add update_bucardo_schema.pl to faciliate version changes. [GSM]

  - Use correct quoted/non-quoted versions of primary keys to allow 
    primary keys with spaces, etc. [GSM]

  - Add new options to log_showtime to show non-epoch time strings [GSM]

  - Make bucardo_ctl use the global version number, not its own. [GSM]

  - Support bytea in primary key and regular columns. [GSM]

3.0.9 Released March 26, 2008
